--- a/skills.html
+++ b/skills.html
@@ -10,18 +10,16 @@
 </head>
 
 <body>
-    <aside>
-        <div class="hero-head"><img src="./dist/img/myPhoto.jpg" alt="myPhoto"></div>
+    <aside class="hero">
+        <div class="hero-head"><img src="./dist/img/myPhoto.jpg" alt="myPhoto" class="hero-head--image"></div>
         <div class="hero-sections"></div>
         <div class="hero-lang">
             <span class="hero-lang-eng">ENG</span>
-            <span class="hero-lang-rus">RUS</span>
-            <div><a href="./https://github.com/Vishinsky-Oleg/mySite">GitHub</a></div>
+            <span class="hero-lang-rus">РУС</span>
         </div>
     </aside>
     <main>
         <section class="skills-container">
-            <h1 class="skills-heading">Skills</h1>
         </section>
     </main>
 </body>
