--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 </head>
 
 <body>
-    <aside>
-        <div class="hero-head"><img src="./dist/img/myPhoto.jpg" alt="myPhoto"></div>
+    <aside class="hero">
+        <div class="hero-head"><img src="./dist/img/myPhoto.jpg" alt="myPhoto" class="hero-head--image"></div>
         <div class="hero-sections"></div>
         <div class="hero-lang">
             <span class="hero-lang-eng">ENG</span>
-            <span class="hero-lang-rus">RUS</span>
-            <div><a href="./https://github.com/Vishinsky-Oleg/mySite">GitHub</a></div>
+            <span class="hero-lang-rus">РУС</span>
         </div>
+        <!-- <div class="hero-git"><a href="./https://github.com/Vishinsky-Oleg/mySite">
+                <ion-icon name="logo-github"></ion-icon>GitHub
+            </a></div> -->
     </aside>
     <main>
         <section class="projects-container"></section>
