--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishinky Oleg - front-end developer</title>
     <link rel="stylesheet" href="./dist/css/style.min.css">
+    <link rel="icon" href="./dist/img/logo.png">
     <script src="./dist/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
