--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishinky Oleg - front-end developer</title>
     <link rel="stylesheet" href="./dist/css/style.min.css">
+    <link rel="icon" href="./dist/img/logo.png">
     <script src="./dist/js/main.js" defer></script>
 </head>
 
